deploy/observability/grafana-prometheus/overlay/observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - observability.rutu-sh.com
      secretName: grafana-tls-secret
  rules:
    - host: observability.rutu-sh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operator-grafana
                port:
                  number: 80
  defaultBackend:
    service:
      name: prometheus-operator-grafana
      port:
        number: 80
